# Easytype

./: README.md  main.py  pyproject.toml
